<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">videoeditor</string>
    <string name="action_settings">Settings</string>
    <string name="input_file_name">输入文件</string>
    <string name="output_file_name">输出文件</string>
    <string name="scale_parameters">缩放</string>
    <string name="effect_type">滤镜</string>
    <string name="split_time">裁剪时间</string>
    <string name="to_type">~</string>
    <string name="start_edit">输出</string>
    <string name="stop_edit">停止编辑</string>
    <string name="preview_start">预览</string>
    <string name="preview_stop">停止</string>

</resources>
