<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.VE.sample.MainActivity" >

    <LinearLayout android:id="@+id/ll_input"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
     <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/input_file_name"
      />
     <EditText android:id="@+id/et_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/ll_output"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/ll_input"
     android:orientation="horizontal"
     >
     <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/output_file_name"
      />
     <EditText android:id="@+id/et_output_name"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:singleLine="true"
        />
     <Button
        android:id="@+id/btn_editor_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/start_edit" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/ll_scale"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/ll_output"
     android:orientation="horizontal"
     >
     <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/scale_parameters"
      />
     <Spinner android:id="@+id/scale_spinner_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
     <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/split_time"
      />
    <EditText android:id="@+id/et_begin_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        />
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/to_type"
      />
    <EditText android:id="@+id/et_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        />
     
    </LinearLayout>

  <LinearLayout android:id="@+id/ll_effect"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/ll_scale"
     android:orientation="horizontal"
     >
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/effect_type"
      />
     <Spinner android:id="@+id/effect_spinner_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        />
    <Button
        android:id="@+id/btn_preview_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/preview_start" />
    <Button
        android:id="@+id/btn_preview_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/preview_stop" />
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/ll_effect"
     android:orientation="horizontal"
     >
     </LinearLayout>

</RelativeLayout>
